WIP: SDL3, mednafen, lightspark, xenia-canary, asahi audio stack

--- a/Config.in
+++ b/Config.in
@@ -421,6 +421,7 @@ menu "REG.linux"
 menu "Audio"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/audio/alsa-ucm-conf/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/audio/ayn-alsa-ucm-conf/Config.in"
+  source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/audio/asahi-audio/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/audio/asahi-alsa-ucm-conf/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/audio/chromebook-ucm-conf/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/audio/alsa-topology-conf/Config.in"
