Rename and fix SDL3-mixer and SDL3-image, bring back modules (MOD,S3M,XM..) playback support into REG-ES

--- a/package/reglinux/libraries/sdl3_image/Config.in
+++ b/package/reglinux/libraries/sdl3_image/Config.in
@@ -1,5 +1,5 @@
 config BR2_PACKAGE_SDL3_IMAGE
-	bool "sdl3-image"
+	bool "sdl3_image"
 	depends on !BR2_STATIC_LIBS
 	select BR2_PACKAGE_SDL3
 	select BR2_PACKAGE_WEBP
