Better sdl3_mixer, add sdl3_tff + plutosvg, system libs for REG-ES

--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -1877,7 +1877,7 @@ config BR2_PACKAGE_REGLINUX_SDL3
 	select BR2_PACKAGE_SDL3_IMAGE
 	select BR2_PACKAGE_SDL3_MIXER
 	#select BR2_PACKAGE_SDL3_NET
-	#select BR2_PACKAGE_SDL3_TTF
+	select BR2_PACKAGE_SDL3_TTF
 	select BR2_PACKAGE_SDL3_OPENGLES	if BR2_PACKAGE_HAS_LIBGLES
 	select BR2_PACKAGE_SDL3_OPENGL		if BR2_PACKAGE_HAS_LIBGL
 	select BR2_PACKAGE_SDL3_X11		if BR2_PACKAGE_XWAYLAND
