--- a/Config.in
+++ b/Config.in
@@ -579,10 +579,12 @@ endmenu
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/lunasvg/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/mimalloc/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/plutovg/Config.in"
+  source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/plutosvg/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/reglinux-qt6/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/sdl3/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/sdl3_image/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/sdl3_mixer/Config.in"
+  source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/sdl3_ttf/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/shaderc/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/vkd3d/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/vulkan-volk/Config.in"
