--- a/package/reglinux/reglinux-emulationstation/wayland/sway/config
+++ b/package/reglinux/reglinux-emulationstation/wayland/sway/config
@@ -34,3 +34,4 @@ for_window [instance="xterm"] border none, fullscreen
 # Starts EmulationStation when loading sway
 exec /usr/bin/system-mouse hide
 exec /usr/bin/emulationstation-standalone
+exec /usr/bin/system-resolution mapTouchScreen
