--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -160,6 +160,7 @@ config BR2_PACKAGE_REGLINUX_VULKAN
 	select BR2_PACKAGE_MESA3D_VULKAN_DRIVER_BROADCOM	if BR2_PACKAGE_SYSTEM_TARGET_BCM2711 || BR2_PACKAGE_SYSTEM_TARGET_BCM2712
 	select BR2_PACKAGE_MESA3D_VULKAN_DRIVER_PANFROST	if BR2_PACKAGE_BATOCERA_PANFROST_MESA3D
 	select BR2_PACKAGE_MESA3D_VULKAN_DRIVER_FREEDRENO	if BR2_PACKAGE_BATOCERA_FREEDRENO_MESA3D
+	select BR2_PACKAGE_MESA3D_VULKAN_DRIVER_ASAHI		if BR2_PACKAGE_REGLINUX_ASAHI_MESA3D
 
 	# Zink for OpenGL on-the-top of Vulkan
 	select BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ZINK		if BR2_PACKAGE_MESA3D
@@ -355,20 +356,21 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_GAMEMODE		# ALL
 
 	# Vulkan-enabled targets
-	select BR2_PACKAGE_REGLINUX_VULKAN	if  BR2_PACKAGE_SYSTEM_TARGET_X86_ANY		|| \
-						    BR2_PACKAGE_SYSTEM_TARGET_BCM2711		|| \
-						    BR2_PACKAGE_SYSTEM_TARGET_BCM2712		|| \
-						    BR2_PACKAGE_SYSTEM_TARGET_H616		|| \
-						    BR2_PACKAGE_SYSTEM_TARGET_H700		|| \
-						    BR2_PACKAGE_SYSTEM_TARGET_RK3326		|| \
-						    BR2_PACKAGE_SYSTEM_TARGET_RK3568		|| \
-						    BR2_PACKAGE_SYSTEM_TARGET_RK3588		|| \
+	select BR2_PACKAGE_REGLINUX_VULKAN	if  BR2_PACKAGE_SYSTEM_TARGET_X86_ANY	|| \
+						    BR2_PACKAGE_SYSTEM_TARGET_ASAHI	|| \
+						    BR2_PACKAGE_SYSTEM_TARGET_BCM2711	|| \
+						    BR2_PACKAGE_SYSTEM_TARGET_BCM2712	|| \
+						    BR2_PACKAGE_SYSTEM_TARGET_H616	|| \
+						    BR2_PACKAGE_SYSTEM_TARGET_H700	|| \
+						    BR2_PACKAGE_SYSTEM_TARGET_RK3326	|| \
+						    BR2_PACKAGE_SYSTEM_TARGET_RK3568	|| \
+						    BR2_PACKAGE_SYSTEM_TARGET_RK3588	|| \
 						    BR2_PACKAGE_SYSTEM_TARGET_S905GEN2	|| \
 						    BR2_PACKAGE_SYSTEM_TARGET_S905GEN3	|| \
-						    BR2_PACKAGE_SYSTEM_TARGET_S922X		|| \
-						    BR2_PACKAGE_SYSTEM_TARGET_SM8250		|| \
-						    BR2_PACKAGE_SYSTEM_TARGET_SM8550		|| \
-						    BR2_PACKAGE_SYSTEM_TARGET_JH7110		|| \
+						    BR2_PACKAGE_SYSTEM_TARGET_S922X	|| \
+						    BR2_PACKAGE_SYSTEM_TARGET_SM8250	|| \
+						    BR2_PACKAGE_SYSTEM_TARGET_SM8550	|| \
+						    BR2_PACKAGE_SYSTEM_TARGET_JH7110	|| \
 						    BR2_PACKAGE_SYSTEM_TARGET_K1
 
 	# wireless drivers
