Make sure fragment configs applied everywhere and remove new-lg4ff patch

--- a/board/samsung/exynos5422/linux-exynos5422-defconfig.config
+++ b/board/samsung/exynos5422/linux-exynos5422-defconfig.config
@@ -4295,7 +4295,7 @@ CONFIG_HID_LOGITECH=y
 # CONFIG_LOGITECH_FF is not set
 # CONFIG_LOGIRUMBLEPAD2_FF is not set
 # CONFIG_LOGIG940_FF is not set
-# CONFIG_LOGIWHEELS_FF is not set
+CONFIG_LOGIWHEELS_FF=y
 # CONFIG_HID_MAGICMOUSE is not set
 # CONFIG_HID_MALTRON is not set
 # CONFIG_HID_MAYFLASH is not set
