--- a/board/spacemit/k1/linux-defconfig.config
+++ b/board/spacemit/k1/linux-defconfig.config
@@ -5060,7 +5060,7 @@ CONFIG_HID_GENERIC=y
 # CONFIG_HID_LED is not set
 # CONFIG_HID_LENOVO is not set
 # CONFIG_HID_LETSKETCH is not set
-# CONFIG_HID_LOGITECH is not set
+CONFIG_HID_LOGITECH=y
 # CONFIG_HID_MAGICMOUSE is not set
 # CONFIG_HID_MALTRON is not set
 # CONFIG_HID_MAYFLASH is not set
