--- a/board/amlogic/a3gen2/linux-kvim4-5.4.180.config
+++ b/board/amlogic/a3gen2/linux-kvim4-5.4.180.config
@@ -4416,7 +4416,7 @@ CONFIG_HID_LOGITECH_HIDPP=y
 # CONFIG_LOGITECH_FF is not set
 # CONFIG_LOGIRUMBLEPAD2_FF is not set
 # CONFIG_LOGIG940_FF is not set
-# CONFIG_LOGIWHEELS_FF is not set
+CONFIG_LOGIWHEELS_FF=y
 CONFIG_HID_MAGICMOUSE=y
 # CONFIG_HID_MALTRON is not set
 # CONFIG_HID_MAYFLASH is not set
