--- a/board/qualcomm/sm8550/odin2/grub.cfg
+++ b/board/qualcomm/sm8550/odin2/grub.cfg
@@ -2,7 +2,7 @@ set default="0"
 set timeout="0"
 
 menuentry "Reglinux" {
-    linux /boot/Image label=REGLINUX rootwait fbcon=rotate:3 console=ttyMSM0,115200n8 clk_ignore_unused pd_ignore_unused quiet vt.global_cursor_default=0
+    linux /boot/Image label=REGLINUX rootwait console=ttyMSM0,115200n8 grub_portable clk_ignore_unused pd_ignore_unused quiet vt.global_cursor_default=0
     initrd /boot/initrd.lz4
     devicetree /boot/qcs8550-ayn-odin2portal.dtb
 }
