--- a/board/starfive/jh7110/linux-defconfig.config
+++ b/board/starfive/jh7110/linux-defconfig.config
@@ -5145,7 +5145,7 @@ CONFIG_HID_GOOGLE_STADIA_FF=y
 # CONFIG_HID_LED is not set
 # CONFIG_HID_LENOVO is not set
 # CONFIG_HID_LETSKETCH is not set
-# CONFIG_HID_LOGITECH is not set
+CONFIG_HID_LOGITECH=y
 # CONFIG_HID_MAGICMOUSE is not set
 # CONFIG_HID_MALTRON is not set
 # CONFIG_HID_MAYFLASH is not set
