Switch RA sound driver default to pipewire on platforms it's enabled, run REG-ES with HIDAPI/SDL_GameController enabled

--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-odroidxu4.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-odroidxu4.yml
@@ -1,7 +1,7 @@
 default:
   options:
     retroarch.video_hard_sync: 0
-    retroarch.audio_driver: alsathread
+    retroarch.audio_driver: pipewire
 
 dreamcast:
   options:
