--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-h700.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-h700.yml
@@ -2,7 +2,7 @@ default:
   options:
     video_threaded: true
     smooth: false
-    retroarch.audio_driver: alsathread
+    retroarch.audio_driver: pipewire
 
 3ds:
   emulator: libretro
