--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-rk3328.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-rk3328.yml
@@ -3,7 +3,7 @@ default:
     video_threaded: true
     smooth: false
     retroarch.menu_driver: xmb
-    retroarch.audio_driver: alsathread
+    retroarch.audio_driver: pipewire
 
 fmtowns:
   emulator: libretro
