--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-s812.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-s812.yml
@@ -1,7 +1,7 @@
 default:
   options:
     retroarch.menu_driver: xmb
-    retroarch.audio_driver: alsathread
+    retroarch.audio_driver: pipewire
     retroarch.audio_out_rate: 44100
 
 mastersystem:
