--- a/package/reglinux/retroarch/retroarch/Config.in
+++ b/package/reglinux/retroarch/retroarch/Config.in
@@ -8,6 +8,8 @@ config BR2_PACKAGE_RETROARCH
 	select BR2_PACKAGE_SLANG_SHADERS        if BR2_PACKAGE_REGLINUX_VULKAN
 	select BR2_PACKAGE_NOTO_CJK_FONTS
 	select BR2_PACKAGE_GAMEMODE
+	select BR2_PACKAGE_HIDAPI
+	select BR2_PACKAGE_LIBUSB
     help
       A multi emulator frontend.
 	  
