--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -392,7 +392,7 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_RTL8821AU_MORROWNR	if BR2_PACKAGE_SYSTEM_TARGET_S922X || BR2_PACKAGE_SYSTEM_TARGET_A3GEN2 || BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
 	select BR2_PACKAGE_RTL88X2BU		if BR2_PACKAGE_SYSTEM_TARGET_S922X || BR2_PACKAGE_SYSTEM_TARGET_A3GEN2 || BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
 	select BR2_PACKAGE_RTL8723BU		if BR2_PACKAGE_SYSTEM_TARGET_S922X || BR2_PACKAGE_SYSTEM_TARGET_A3GEN2 || BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
-	select BR2_PACKAGE_RTL8188EU		if BR2_PACKAGE_SYSTEM_TARGET_S922X || BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
+	select BR2_PACKAGE_RTL8188EU		if BR2_PACKAGE_SYSTEM_TARGET_S922X || BR2_PACKAGE_SYSTEM_TARGET_A3GEN2 || BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
 	select BR2_PACKAGE_RTL8821CU		if BR2_PACKAGE_SYSTEM_TARGET_S922X || BR2_PACKAGE_SYSTEM_TARGET_A3GEN2 || \
 						   BR2_PACKAGE_SYSTEM_TARGET_X86_ANY || BR2_PACKAGE_SYSTEM_TARGET_RK3588
 	select BR2_PACKAGE_RTL8189ES		if BR2_PACKAGE_SYSTEM_TARGET_S905 || BR2_PACKAGE_SYSTEM_TARGET_S905GEN2 || BR2_PACKAGE_SYSTEM_TARGET_S905GEN3
