--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -318,11 +318,11 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 
 	# Case
 	select BR2_PACKAGE_ELEMENT14_PI_DESKTOP		if BR2_PACKAGE_SYSTEM_TARGET_BCM2836 || BR2_PACKAGE_SYSTEM_TARGET_BCM2837 # rpi2/rpi3
-	select BR2_PACKAGE_REGLINUX_GPICASE		if BR2_PACKAGE_SYSTEM_TARGET_BCM2835 || BR2_PACKAGE_SYSTEM_TARGET_BCM2836 || BR2_PACKAGE_SYSTEM_TARGET_BCM2711 # retroflag gpicase
-	select BR2_PACKAGE_ROSHAMBO_CASE		if BR2_PACKAGE_SYSTEM_TARGET_RK3399 # roshambo case
+	select BR2_PACKAGE_GPICASE			if BR2_PACKAGE_SYSTEM_TARGET_BCM2835 || BR2_PACKAGE_SYSTEM_TARGET_BCM2836 || BR2_PACKAGE_SYSTEM_TARGET_BCM2711 # retroflag gpicase
+	select BR2_PACKAGE_ROSHAMBO			if BR2_PACKAGE_SYSTEM_TARGET_RK3399 # roshambo case
 	select BR2_PACKAGE_RPIGPIOSWITCH		if BR2_PACKAGE_BATOCERA_RPI_ANY # gpio switchs
 	select BR2_PACKAGE_RETROGAME			if BR2_PACKAGE_BATOCERA_RPI_ANY # gpio pads
-	select BR2_PACKAGE_DESKPIPRO_CASE		if BR2_PACKAGE_SYSTEM_TARGET_BCM2711 # deskpi pro case rpi4 only
+	select BR2_PACKAGE_DESKPIPRO			if BR2_PACKAGE_SYSTEM_TARGET_BCM2711 # deskpi pro case rpi4 only
 	select BR2_PACKAGE_PIBOY			if BR2_PACKAGE_SYSTEM_TARGET_BCM2836	|| \
 							   BR2_PACKAGE_SYSTEM_TARGET_BCM2837	|| \
 							   BR2_PACKAGE_SYSTEM_TARGET_BCM2711 # piboy rpi3/rpi4
