--- a/package/cases/gpicase/Config.in
+++ b/package/cases/gpicase/Config.in
@@ -1,5 +1,5 @@
-config BR2_PACKAGE_REGLINUX_GPICASE
-        bool "reglinux-gpicase"
+config BR2_PACKAGE_GPICASE
+        bool "gpicase"
 	depends on BR2_PACKAGE_BATOCERA_RPI_ANY
 	depends on BR2_LINUX_KERNEL
 
@@ -7,5 +7,5 @@ config BR2_PACKAGE_REGLINUX_GPICASE
 
 	  https://github.com/RetroFlag/retroflag-picase
 
-comment "reglinux-gpicase needs a Linux kernel to be built"
+comment "gpicase needs a Linux kernel to be built"
 	depends on !BR2_LINUX_KERNEL
