--- a/package/cases/roshambo/Config.in
+++ b/package/cases/roshambo/Config.in
@@ -1,5 +1,5 @@
-config BR2_PACKAGE_ROSHAMBO_CASE
-	bool "roshambo-case"
+config BR2_PACKAGE_ROSHAMBO
+	bool "roshambo"
 	depends on BR2_PACKAGE_PYTHON3
 	help
 	  Scripts to enable the LED, Fan, and Buttons on the Kintaro SNES and Roshambo Super Famicom Cases.
