Working VIM4 (vim4n dts) on 5.15 amlogic + panfrost

--- a/board/amlogic/a3gen2/linux-defconfig-fragment.config
+++ b/board/amlogic/a3gen2/linux-defconfig-fragment.config
@@ -29,7 +29,7 @@ CONFIG_CIFS_SMB311=y
 
 CONFIG_EXFAT_FS=y
 # To control the GPU performance
-CONFIG_MALI_MIDGARD_DVFS=y
+#CONFIG_MALI_MIDGARD_DVFS=y
 
 # Normally part of Initramfs kernel modules
 # but also shows what is overridden over a clean default config file
