--- a/board/amlogic/a3gen2/linux-kvim4-5.15.137.config
+++ b/board/amlogic/a3gen2/linux-kvim4-5.15.137.config
@@ -6895,17 +6895,17 @@ CONFIG_INTERCONNECT=y
 #
 # ARM GPU Configuration
 #
-CONFIG_MALI_MIDGARD=m
-CONFIG_MALI_PLATFORM_NAME="devicetree"
-CONFIG_MALI_REAL_HW=y
+#CONFIG_MALI_MIDGARD=m
+#CONFIG_MALI_PLATFORM_NAME="devicetree"
+#CONFIG_MALI_REAL_HW=y
 
 #
 # Platform specific options
 #
 # CONFIG_MALI_CSF_SUPPORT is not set
 # CONFIG_MALI_DEVFREQ is not set
-CONFIG_MALI_MIDGARD_DVFS=y
-CONFIG_MALI_GATOR_SUPPORT=y
+#CONFIG_MALI_MIDGARD_DVFS=y
+#CONFIG_MALI_GATOR_SUPPORT=y
 # CONFIG_MALI_MIDGARD_ENABLE_TRACE is not set
 # CONFIG_MALI_ARBITER_SUPPORT is not set
 # CONFIG_MALI_DMA_BUF_MAP_ON_DEMAND is not set
