Lighter kernel, start to cleanup kernel mess a bit. Use kvim4n DTB by default.

--- a/board/amlogic/a3gen2/khadas-vim4/boot/extlinux.conf
+++ b/board/amlogic/a3gen2/khadas-vim4/boot/extlinux.conf
@@ -1,6 +1,6 @@
 LABEL REG-Linux
     LINUX /boot/linux
-    FDT /boot/amlogic/kvim4.dtb
+    FDT /boot/amlogic/kvim4n.dtb
     INITRD /boot/initrd.gz
     APPEND initrd=/boot/initrd.gz label=REGLINUX partition_type=generic rootwait quiet splash console=ttyAML0,115200n8 console=ttyS0,115200n8 vt.global_cursor_default=0 fan=auto ${bootargs} ${boot_user_args}
 
