--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -134,12 +134,13 @@ config BR2_PACKAGE_REGLINUX_MUSIC_SUPPORT
 	select BR2_PACKAGE_ALSA_UTILS_ACONNECT  if BR2_PACKAGE_ALSA_UTILS
 	select BR2_PACKAGE_ALSA_UTILS_APLAYMIDI if BR2_PACKAGE_ALSA_UTILS
 
-	# FLAC, Ogg/Vorbis, MP3, Modules support
-	select BR2_PACKAGE_FLAC			# flac
-	select BR2_PACKAGE_LIBMAD		# mp3
-	select BR2_PACKAGE_LIBMODPLUG		# modules (mod,xm,s3m,it...)
-	select BR2_PACKAGE_LIBXMP		# modules (mod,xm,s3m,it...)
-	select BR2_PACKAGE_LIBVORBIS		# ogg
+	# FLAC, Ogg/Vorbis/Opus, MP3, Modules support
+	select BR2_PACKAGE_FLAC		# flac
+	select BR2_PACKAGE_LIBMAD	# mp3
+	select BR2_PACKAGE_LIBXMP	# modules (mod,xm,s3m,it...)
+	select BR2_PACKAGE_LIBOGG	# ogg container
+	select BR2_PACKAGE_LIBVORBIS	# vorbis codec
+	select BR2_PACKAGE_OPUS		# opus codec
 
 	help
 	  Music support packages (MIDI, ALSA, FLAC, Ogg/Vorbis, MP3, modules...)
@@ -1391,10 +1392,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 
 	# PSX
 	# newer versions of duckstation stricter on OpenGL ES 3.x, no more support for KMS/DRM
-	select BR2_PACKAGE_DUCKSTATION			if (!BR2_mipsel) && BR2_PACKAGE_HAS_GLES3 \
-							   && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 \
-							   && !BR2_PACKAGE_SYSTEM_TARGET_S9GEN4 \
-							   && !BR2_PACKAGE_SYSTEM_TARGET_A3GEN2
+	select BR2_PACKAGE_DUCKSTATION			if (!BR2_mipsel) && BR2_PACKAGE_HAS_GLES3 && !BR2_PACKAGE_SYSTEM_TARGET_RK3326
 
 	select BR2_PACKAGE_DUCKSTATION_LEGACY		if !BR2_mipsel && !BR2_RISCV_64			&& \
 							   !BR2_PACKAGE_SYSTEM_TARGET_BCM2835		&& \
@@ -1440,20 +1438,20 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_SYSTEM_TARGET_RK3588     || \
 							   BR2_PACKAGE_SYSTEM_TARGET_SM8250     || \
 							   BR2_PACKAGE_SYSTEM_TARGET_SM8550     || \
-							   BR2_PACKAGE_SYSTEM_TARGET_ASAHI    || \
+							   BR2_PACKAGE_SYSTEM_TARGET_ASAHI      || \
 							   BR2_PACKAGE_SYSTEM_TARGET_BCM2712    || \
-							   BR2_PACKAGE_SYSTEM_TARGET_MT8395
-
-	select BR2_PACKAGE_LIBRETRO_DOLPHIN		if BR2_PACKAGE_SYSTEM_TARGET_A3GEN2 || BR2_PACKAGE_SYSTEM_TARGET_S9GEN4
+							   BR2_PACKAGE_SYSTEM_TARGET_MT8395	|| \
+							   BR2_PACKAGE_SYSTEM_TARGET_A3GEN2	|| \
+							   BR2_PACKAGE_SYSTEM_TARGET_S9GEN4
 
 	# Nintendo Switch
 	select BR2_PACKAGE_CITRON			if BR2_PACKAGE_SYSTEM_TARGET_X86_64_V3  || \
-							   BR2_PACKAGE_SYSTEM_TARGET_ASAHI    || \
+							   BR2_PACKAGE_SYSTEM_TARGET_ASAHI      || \
 							   BR2_PACKAGE_SYSTEM_TARGET_SM8250     || \
 							   BR2_PACKAGE_SYSTEM_TARGET_SM8550     || \
 							   BR2_PACKAGE_SYSTEM_TARGET_RK3588
 	select BR2_PACKAGE_RYUJINX			if BR2_PACKAGE_SYSTEM_TARGET_X86_64_V3  || \
-							   BR2_PACKAGE_SYSTEM_TARGET_ASAHI    || \
+							   BR2_PACKAGE_SYSTEM_TARGET_ASAHI      || \
 							   BR2_PACKAGE_SYSTEM_TARGET_SM8250     || \
 							   BR2_PACKAGE_SYSTEM_TARGET_SM8550     || \
 							   BR2_PACKAGE_SYSTEM_TARGET_RK3588
