Improve VIM4 booting a bit

--- a/board/amlogic/a3gen2/khadas-vim4/boot/extlinux.conf
+++ b/board/amlogic/a3gen2/khadas-vim4/boot/extlinux.conf
@@ -1,5 +1,5 @@
 LABEL REG-Linux
     LINUX /boot/linux
-    FDT /boot/amlogic/kvim4.dtb
+    FDTDIR /boot/
     INITRD /boot/initrd.gz
     APPEND initrd=/boot/initrd.gz label=REGLINUX partition_type=generic rootwait ${bootargs} console=tty0 console=ttyS0,115200n8 quiet splash=verbose ${boot_user_args} ${extraargs} ${extraboardargs}
