--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -171,7 +171,7 @@ config BR2_PACKAGE_REGLINUX_VULKAN
 	select BR2_PACKAGE_MESA3D_VULKAN_DRIVER_LAVAPIPE	if BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
 
 	# Vulkan samples
-	#select BR2_PACKAGE_VULKAN_SAMPLES			if BR2_PACKAGE_BATOCERA_DEBUG
+	#select BR2_PACKAGE_VULKAN_SAMPLES			if BR2_ENABLE_DEBUG
 
 	help
 	  Vulkan support for REG-Linux
@@ -479,21 +479,21 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	help
 	  Install the batocera.linux system files
 
-config BR2_PACKAGE_BATOCERA_DEBUG
-	bool "add debug options"
+config BR2_PACKAGE_SYSTEM_DEBUG
+	bool "System debug mode"
 
+	select BR2_ENABLE_DEBUG
 	select BR2_PACKAGE_TMUX
-	#select BR2_PACKAGE_STRACE
+	select BR2_PACKAGE_STRACE
 	select BR2_PACKAGE_VALGRIND
 	select BR2_BINUTILS_GPROFNG
 	select BR2_PACKAGE_GDB
 	select BR2_PACKAGE_GDB_DEBUGGER
 	select BR2_PACKAGE_LINUX_TOOLS_PERF
 	select BR2_PACKAGE_LINUX_TOOLS_PERF_TUI
-	select BR2_PACKAGE_X11VNC			if BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
 
 	help
-	  Install debug packages for batocera.linux
+	  Install packages for system debug mode
 
 config BR2_TARGET_BATOCERA_IMAGES_DEFINITIONS
 	bool "target images definitions"
