valgrind: bump to 3.24.0

--- a/board/reglinux/linux-defconfig-reglinux.config
+++ b/board/reglinux/linux-defconfig-reglinux.config
@@ -147,3 +147,8 @@ CONFIG_SQUASHFS_ZSTD=y
 CONFIG_SQUASHFS_LZ4=y
 CONFIG_CHR_DEV_SG=m
 CONFIG_MODULE_COMPRESS_XZ=n
+
+#
+# Kernel Performance Events And Counters
+#
+CONFIG_PERF_EVENTS=y
