disable valgrind to arm32

--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -485,7 +485,7 @@ config BR2_PACKAGE_SYSTEM_DEBUG
 	select BR2_ENABLE_DEBUG
 	select BR2_PACKAGE_TMUX
 	select BR2_PACKAGE_STRACE
-	select BR2_PACKAGE_VALGRIND
+	select BR2_PACKAGE_VALGRIND			if !BR2_arm
 	select BR2_BINUTILS_GPROFNG
 	select BR2_PACKAGE_GDB
 	select BR2_PACKAGE_GDB_DEBUGGER
