--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -1021,29 +1021,15 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 	select BR2_PACKAGE_MELONDS			if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY || (BR2_aarch64 && BR2_PACKAGE_HAS_GLES3 && !BR2_PACKAGE_SYSTEM_TARGET_RK3326)
 
 	# 3DS
-	# Azahar not ready yet, will superseed Citra/Lime3DS mess
-	#select BR2_PACKAGE_AZAHAR			if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY || \
-	#						   BR2_PACKAGE_SYSTEM_TARGET_BCM2711    || \
-	#						   BR2_PACKAGE_SYSTEM_TARGET_BCM2712    || \
-	#						   BR2_PACKAGE_SYSTEM_TARGET_RK3588     || \
-	#						   BR2_PACKAGE_SYSTEM_TARGET_SM8250     || \
-	#						   BR2_PACKAGE_SYSTEM_TARGET_SM8550     || \
-	#						   BR2_PACKAGE_SYSTEM_TARGET_ASAHI      || \
-	#						   BR2_PACKAGE_SYSTEM_TARGET_MT8395
-	select BR2_PACKAGE_LIME3DS			if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY || \
+	# Azahar replaces Citra and Lime3DS
+	select BR2_PACKAGE_AZAHAR			if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY || \
 							   BR2_PACKAGE_SYSTEM_TARGET_BCM2711    || \
 							   BR2_PACKAGE_SYSTEM_TARGET_BCM2712    || \
 							   BR2_PACKAGE_SYSTEM_TARGET_RK3588     || \
 							   BR2_PACKAGE_SYSTEM_TARGET_SM8250     || \
 							   BR2_PACKAGE_SYSTEM_TARGET_SM8550     || \
-							   BR2_PACKAGE_SYSTEM_TARGET_ASAHI      || \
-							   BR2_PACKAGE_SYSTEM_TARGET_MT8395
-	select BR2_PACKAGE_CITRA			if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY || \
-							   BR2_PACKAGE_SYSTEM_TARGET_BCM2711    || \
-							   BR2_PACKAGE_SYSTEM_TARGET_BCM2712    || \
-							   BR2_PACKAGE_SYSTEM_TARGET_RK3588     || \
-							   BR2_PACKAGE_SYSTEM_TARGET_SM8250     || \
-							   BR2_PACKAGE_SYSTEM_TARGET_SM8550     || \
+							   BR2_PACKAGE_SYSTEM_TARGET_S922X      || \
+							   BR2_PACKAGE_SYSTEM_TARGET_A3GEN2     || \
 							   BR2_PACKAGE_SYSTEM_TARGET_ASAHI      || \
 							   BR2_PACKAGE_SYSTEM_TARGET_MT8395
 
