--- a/Config.in
+++ b/Config.in
@@ -203,6 +203,7 @@ menu "Libraries"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/dxvk-nvapi/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/faudio/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/gamemode/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/kddockwidgets/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/libaltsound/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/libdmdutil/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/libpinmame/Config.in"
