--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -485,7 +485,7 @@ config BR2_PACKAGE_SYSTEM_DEBUG
 	select BR2_ENABLE_DEBUG
 	select BR2_PACKAGE_TMUX
 	select BR2_PACKAGE_STRACE
-	select BR2_PACKAGE_VALGRIND			if !BR2_arm
+	select BR2_PACKAGE_VALGRIND                     if !BR2_arm
 	select BR2_BINUTILS_GPROFNG
 	select BR2_PACKAGE_GDB
 	select BR2_PACKAGE_GDB_DEBUGGER
@@ -1280,6 +1280,7 @@ config BR2_PACKAGE_BATOCERA_COMPUTER_SYSTEMS
                                                    BR2_PACKAGE_SYSTEM_TARGET_MT8395
 	select BR2_PACKAGE_AMIBERRY_LITE	if !BR2_PACKAGE_AMIBERRY && !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835
 	select BR2_PACKAGE_LIBRETRO_PUAE	# ALL
+	select BR2_PACKAGE_LIBRETRO_PUAE2021	if !BR2_ARCH_IS_64
 	select BR2_PACKAGE_LIBRETRO_UAE4ARM	if BR2_PACKAGE_SYSTEM_TARGET_BCM2835
 
 	# Apple 2
