--- a/package/emulators/pcsx2/Config.in
+++ b/package/emulators/pcsx2/Config.in
@@ -3,7 +3,7 @@ config BR2_PACKAGE_PCSX2
     depends on BR2_x86_64
     depends on BR2_PACKAGE_XORG7
     select BR2_PACKAGE_FMT
-    select BR2_PACKAGE_JPEG
+    select BR2_PACKAGE_JPEG_TURBO
     select BR2_PACKAGE_WEBP
     select BR2_PACKAGE_ALSA_LIB
     select BR2_PACKAGE_FREETYPE
@@ -23,6 +23,7 @@ config BR2_PACKAGE_PCSX2
     select BR2_PACKAGE_SHADERC
     select BR2_PACKAGE_ECM
     select BR2_PACKAGE_LIBBACKTRACE
+    select BR2_PACKAGE_KDDOCKWIDGETS
 
     help
       PCSX2 is a free and open-source PlayStation 2 (PS2) emulator.
