--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -1517,6 +1517,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_SYSTEM_TARGET_JH7110	|| \
 							   BR2_PACKAGE_SYSTEM_TARGET_K1		|| \
 							   BR2_PACKAGE_SYSTEM_TARGET_S922X	|| \
+							   BR2_PACKAGE_SYSTEM_TARGET_S9GEN4	|| \
 							   BR2_PACKAGE_SYSTEM_TARGET_A3GEN2	|| \
 							   BR2_PACKAGE_SYSTEM_TARGET_RK3588	|| \
 							   BR2_PACKAGE_SYSTEM_TARGET_SM8250	|| \
