--- a/board/amlogic/s9gen4/khadas-vim1s/boot/extlinux.conf
+++ b/board/amlogic/s9gen4/khadas-vim1s/boot/extlinux.conf
@@ -2,4 +2,4 @@ LABEL REG-Linux
     LINUX /boot/linux
     FDT /boot/kvim1s.dtb
     INITRD /boot/initrd.gz
-    APPEND initrd=/boot/initrd.gz label=REGLINUX partition_type=generic rootwait quiet splash console=ttyAML0,921600n8 console=ttyS0,921600n8 vt.global_cursor_default=0 ${bootargs} ${boot_user_args}
+    APPEND initrd=/boot/initrd.gz label=REGLINUX partition_type=generic rootwait ${bootargs} console=tty0 console=ttyS0,115200n8 quiet splash=verbose ${boot_user_args} ${extraargs} ${extraboardargs}
