--- a/board/qualcomm/sm8550/dracut.conf
+++ b/board/qualcomm/sm8550/dracut.conf
@@ -113,290 +113,52 @@ virtiofs \
 "
 
 install_items+=" \
-/lib/firmware/qcom/a650_sqe.fw
-/lib/firmware/qcom/a530v3_gpmu.fw2
-/lib/firmware/qcom/a630_sqe.fw
-/lib/firmware/qcom/a660_gmu.bin
+/lib/firmware/ath12k
+/lib/firmware/ath12k/WCN7850
+/lib/firmware/ath12k/WCN7850/hw2.0
+/lib/firmware/ath12k/WCN7850/hw2.0/regdb.bin
+/lib/firmware/ath12k/WCN7850/hw2.0/amss.bin
+/lib/firmware/ath12k/WCN7850/hw2.0/board-2.bin
+/lib/firmware/ath12k/WCN7850/hw2.0/m3.bin
+/lib/firmware/qca
+/lib/firmware/qca/hmtbtfw20.tlv
+/lib/firmware/qca/hmtnv20.bin
+/lib/firmware/qcom
 /lib/firmware/qcom/vpu
-/lib/firmware/qcom/vpu/vpu20_p1.mbn
-/lib/firmware/qcom/vpu/vpu30_p4_s6.mbn
 /lib/firmware/qcom/vpu/vpu30_p4.mbn
-/lib/firmware/qcom/vpu/vpu20_p4.mbn
-/lib/firmware/qcom/leia_pm4_470.fw
+/lib/firmware/qcom/a740_sqe.fw
+/lib/firmware/qcom/sm8550
+/lib/firmware/qcom/sm8550/ayn
+/lib/firmware/qcom/sm8550/ayn/odin2portal
+/lib/firmware/qcom/sm8550/ayn/odin2portal/adsp.mbn
+/lib/firmware/qcom/sm8550/ayn/odin2portal/cdsp.mbn
+/lib/firmware/qcom/sm8550/ayn/odin2portal/cdsp_dtb.mbn
+/lib/firmware/qcom/sm8550/ayn/odin2portal/adspua.jsn
+/lib/firmware/qcom/sm8550/ayn/odin2portal/adsps.jsn
+/lib/firmware/qcom/sm8550/ayn/odin2portal/battmgr.jsn
+/lib/firmware/qcom/sm8550/ayn/odin2portal/adsp_dtb.mbn
+/lib/firmware/qcom/sm8550/ayn/odin2portal/a740_zap.mbn
+/lib/firmware/qcom/sm8550/ayn/odin2portal/adspr.jsn
+/lib/firmware/qcom/sm8550/ayn/odin2portal/aw883xx_acf.bin
+/lib/firmware/qcom/sm8550/AYN-Odin2-tplg.bin
+/lib/firmware/qcom/gmu_gen70200.bin
 /lib/firmware/qcom/NOTICE.txt
-/lib/firmware/qcom/a650_gmu.bin
-/lib/firmware/qcom/leia_pfp_470.fw
-/lib/firmware/qcom/x1e80100
-/lib/firmware/qcom/x1e80100/adsp.mbn
-/lib/firmware/qcom/x1e80100/gen70500_zap.mbn
-/lib/firmware/qcom/x1e80100/LENOVO
-/lib/firmware/qcom/x1e80100/LENOVO/21N1
-/lib/firmware/qcom/x1e80100/LENOVO/21N1/qcdxkmsuc8380.mbn
-/lib/firmware/qcom/x1e80100/LENOVO/21N1/cdsp_dtbs.elf
-/lib/firmware/qcom/x1e80100/LENOVO/21N1/qccdsp8380.mbn
-/lib/firmware/qcom/x1e80100/LENOVO/21N1/cdspr.jsn
-/lib/firmware/qcom/x1e80100/LENOVO/21N1/adspua.jsn
-/lib/firmware/qcom/x1e80100/LENOVO/21N1/qcadsp8380.mbn
-/lib/firmware/qcom/x1e80100/LENOVO/21N1/adsps.jsn
-/lib/firmware/qcom/x1e80100/LENOVO/21N1/battmgr.jsn
-/lib/firmware/qcom/x1e80100/LENOVO/21N1/adsp_dtbs.elf
-/lib/firmware/qcom/x1e80100/LENOVO/21N1/adspr.jsn
-/lib/firmware/qcom/x1e80100/adspua.jsn
-/lib/firmware/qcom/x1e80100/adsps.jsn
-/lib/firmware/qcom/x1e80100/battmgr.jsn
-/lib/firmware/qcom/x1e80100/adsp_dtb.mbn
-/lib/firmware/qcom/x1e80100/adspr.jsn
-/lib/firmware/qcom/a702_sqe.fw
-/lib/firmware/qcom/gen70500_sqe.fw
-/lib/firmware/qcom/a630_gmu.bin
-/lib/firmware/qcom/a530_pm4.fw
 /lib/firmware/qcom/venus-5.4
 /lib/firmware/qcom/venus-5.4/venus.mdt
 /lib/firmware/qcom/venus-5.4/venus.mbn
 /lib/firmware/qcom/yamato_pfp.fw
-/lib/firmware/qcom/a330_pm4.fw
-/lib/firmware/qcom/a420_pfp.fw
-/lib/firmware/qcom/gen70500_gmu.bin
-/lib/firmware/qcom/a660_sqe.fw
-/lib/firmware/qcom/a300_pfp.fw
-/lib/firmware/qcom/qcm6490
-/lib/firmware/qcom/qcm6490/adsp.mbn
-/lib/firmware/qcom/qcm6490/cdsp.mbn
-/lib/firmware/qcom/qcm6490/cdspr.jsn
-/lib/firmware/qcom/qcm6490/wpss.mbn
-/lib/firmware/qcom/qcm6490/a660_zap.mbn
-/lib/firmware/qcom/qcm6490/adspua.jsn
-/lib/firmware/qcom/qcm6490/adsps.jsn
-/lib/firmware/qcom/qcm6490/battmgr.jsn
-/lib/firmware/qcom/qcm6490/ipa_fws.mbn
-/lib/firmware/qcom/qcm6490/adspr.jsn
-/lib/firmware/qcom/sm8550
-/lib/firmware/qcom/sm8550/SM8550-QRD-tplg.bin
-/lib/firmware/qcom/sm8550/SM8550-HDK-tplg.bin
 /lib/firmware/qcom/yamato_pm4.fw
-/lib/firmware/qcom/a330_pfp.fw
-/lib/firmware/qcom/a530_pfp.fw
 /lib/firmware/qcom/venus-5.2
 /lib/firmware/qcom/venus-5.2/venus.mdt
 /lib/firmware/qcom/venus-5.2/venus.mbn
 /lib/firmware/qcom/venus-6.0
 /lib/firmware/qcom/venus-6.0/venus.mbn
-/lib/firmware/qcom/a530_zap.mdt
-/lib/firmware/qcom/qcs615
-/lib/firmware/qcom/qcs615/a612_zap.mbn
 /lib/firmware/qcom/qdu100
 /lib/firmware/qcom/qdu100/xbl_s.melf
-/lib/firmware/qcom/sdm845
-/lib/firmware/qcom/sdm845/modemuw.jsn
-/lib/firmware/qcom/sdm845/mba.mbn
-/lib/firmware/qcom/sdm845/adsp.mbn
-/lib/firmware/qcom/sdm845/modem.mbn
-/lib/firmware/qcom/sdm845/cdsp.mbn
-/lib/firmware/qcom/sdm845/cdspr.jsn
-/lib/firmware/qcom/sdm845/wlanmdsp.mbn
-/lib/firmware/qcom/sdm845/adspua.jsn
-/lib/firmware/qcom/sdm845/modem_nm.mbn
-/lib/firmware/qcom/sdm845/a630_zap.mbn
-/lib/firmware/qcom/sdm845/Thundercomm
-/lib/firmware/qcom/sdm845/Thundercomm/db845c
-/lib/firmware/qcom/sdm845/Thundercomm/db845c/slpius.jsn
-/lib/firmware/qcom/sdm845/Thundercomm/db845c/slpi.mbn
-/lib/firmware/qcom/sdm845/Thundercomm/db845c/slpir.jsn
-/lib/firmware/qcom/sdm845/adspr.jsn
-/lib/firmware/qcom/apq8096
-/lib/firmware/qcom/apq8096/mba.mbn
-/lib/firmware/qcom/apq8096/adsp.mbn
-/lib/firmware/qcom/apq8096/modem.mbn
-/lib/firmware/qcom/apq8096/adspua.jsn
-/lib/firmware/qcom/apq8096/a530_zap.mbn
-/lib/firmware/qcom/apq8096/modemr.jsn
-/lib/firmware/qcom/apq8096/adspr.jsn
-/lib/firmware/qcom/a420_pm4.fw
-/lib/firmware/qcom/aic100
-/lib/firmware/qcom/aic100/sbl.bin
-/lib/firmware/qcom/aic100/fw2.bin
-/lib/firmware/qcom/aic100/fw9.bin
-/lib/firmware/qcom/aic100/fw1.bin
-/lib/firmware/qcom/aic100/fw10.bin
-/lib/firmware/qcom/aic100/fw5.bin
-/lib/firmware/qcom/sc8280xp
-/lib/firmware/qcom/sc8280xp/LENOVO
-/lib/firmware/qcom/sc8280xp/LENOVO/21BX
-/lib/firmware/qcom/sc8280xp/LENOVO/21BX/qcadsp8280.mbn
-/lib/firmware/qcom/sc8280xp/LENOVO/21BX/cdspr.jsn
-/lib/firmware/qcom/sc8280xp/LENOVO/21BX/adspua.jsn
-/lib/firmware/qcom/sc8280xp/LENOVO/21BX/qcvss8280.mbn
-/lib/firmware/qcom/sc8280xp/LENOVO/21BX/qcdxkmsuc8280.mbn
-/lib/firmware/qcom/sc8280xp/LENOVO/21BX/battmgr.jsn
-/lib/firmware/qcom/sc8280xp/LENOVO/21BX/qcslpi8280.mbn
-/lib/firmware/qcom/sc8280xp/LENOVO/21BX/audioreach-tplg.bin
-/lib/firmware/qcom/sc8280xp/LENOVO/21BX/qccdsp8280.mbn
-/lib/firmware/qcom/sc8280xp/LENOVO/21BX/adspr.jsn
-/lib/firmware/qcom/sc8280xp/SC8280XP-LENOVO-X13S-tplg.bin
 /lib/firmware/qcom/venus-4.2
 /lib/firmware/qcom/venus-4.2/venus.mdt
 /lib/firmware/qcom/venus-4.2/venus.mbn
-/lib/firmware/qcom/a690_gmu.bin
-/lib/firmware/qcom/sa8775p
-/lib/firmware/qcom/sa8775p/adsp.mbn
-/lib/firmware/qcom/sa8775p/gpdsp0.mbn
-/lib/firmware/qcom/sa8775p/cdspr.jsn
-/lib/firmware/qcom/sa8775p/adspua.jsn
-/lib/firmware/qcom/sa8775p/cdsp0.mbn
-/lib/firmware/qcom/sa8775p/cdsp1.mbn
-/lib/firmware/qcom/sa8775p/gpdspr.jsn
-/lib/firmware/qcom/sa8775p/gpdsp1.mbn
-/lib/firmware/qcom/sa8775p/gpdsp1r.jsn
-/lib/firmware/qcom/sa8775p/a663_zap.mbn
-/lib/firmware/qcom/sa8775p/adspr.jsn
-/lib/firmware/qcom/qrb4210
-/lib/firmware/qcom/qrb4210/modemuw.jsn
-/lib/firmware/qcom/qrb4210/adsp.mbn
-/lib/firmware/qcom/qrb4210/modem.mbn
-/lib/firmware/qcom/qrb4210/cdsp.mbn
-/lib/firmware/qcom/qrb4210/cdspr.jsn
-/lib/firmware/qcom/qrb4210/a610_zap.mbn
-/lib/firmware/qcom/qrb4210/wlanmdsp.mbn
-/lib/firmware/qcom/qrb4210/adspua.jsn
-/lib/firmware/qcom/qrb4210/adsps.jsn
-/lib/firmware/qcom/qrb4210/modemr.jsn
-/lib/firmware/qcom/qrb4210/adspr.jsn
-/lib/firmware/qcom/qcm2290
-/lib/firmware/qcom/qcm2290/modemuw.jsn
-/lib/firmware/qcom/qcm2290/adsp.mbn
-/lib/firmware/qcom/qcm2290/modem.mbn
-/lib/firmware/qcom/qcm2290/a702_zap.mbn
-/lib/firmware/qcom/qcm2290/wlanmdsp.mbn
-/lib/firmware/qcom/qcm2290/adspua.jsn
-/lib/firmware/qcom/qcm2290/adsps.jsn
-/lib/firmware/qcom/qcm2290/modemr.jsn
-/lib/firmware/qcom/qcm2290/adspr.jsn
 /lib/firmware/qcom/venus-1.8
 /lib/firmware/qcom/venus-1.8/venus.mdt
 /lib/firmware/qcom/venus-1.8/venus.mbn
-/lib/firmware/qcom/apq8016
-/lib/firmware/qcom/apq8016/mba.mbn
-/lib/firmware/qcom/apq8016/modem.mbn
-/lib/firmware/qcom/apq8016/WCNSS_qcom_wlan_nv_sbc.bin
-/lib/firmware/qcom/apq8016/wcnss.mbn
-/lib/firmware/qcom/a663_gmu.bin
-/lib/firmware/qcom/sm8650
-/lib/firmware/qcom/sm8650/SM8650-QRD-tplg.bin
-/lib/firmware/qcom/sm8650/SM8650-MTP-tplg.bin
-/lib/firmware/qcom/a300_pm4.fw
-/lib/firmware/qcom/sm8250
-/lib/firmware/qcom/sm8250/adsp.mbn
-/lib/firmware/qcom/sm8250/cdsp.mbn
-/lib/firmware/qcom/sm8250/cdspr.jsn
-/lib/firmware/qcom/sm8250/adspua.jsn
-/lib/firmware/qcom/sm8250/a650_zap.mbn
-/lib/firmware/qcom/sm8250/Thundercomm
-/lib/firmware/qcom/sm8250/Thundercomm/RB5
-/lib/firmware/qcom/sm8250/Thundercomm/RB5/slpius.jsn
-/lib/firmware/qcom/sm8250/Thundercomm/RB5/slpi.mbn
-/lib/firmware/qcom/sm8250/Thundercomm/RB5/slpir.jsn
-/lib/firmware/qcom/sm8250/adspr.jsn
 "
-#./boot/extlinux/extlinux.conf
-#./boot/uEnv.txt
-#./etc/plymouth/plymouthd.conf
-#./etc/NetworkManager/conf.d/10-globally-managed-devices.conf
-#./etc/fw_env.config
-#./etc/modprobe.d/dhd.conf.5.15
-#./etc/modprobe.d/amvdec_ports.conf
-#./etc/modprobe.d/amvdec_mh264.conf
-#./etc/modprobe.d/isp.conf
-#./etc/initramfs/post-update.d/99-uboot
-#./etc/initramfs-tools/modules.5.15
-#./etc/initramfs-tools/hooks/insmod
-#./etc/initramfs-tools/hooks/stat
-#./etc/initramfs-tools/hooks/lsmod
-#./etc/initramfs-tools/hooks/fbset
-#./etc/initramfs-tools/scripts/local-top
-#./etc/initramfs-tools/scripts/local-top/khadas_init.sh
-#./etc/ppp/peers/quectel-chat-disconnect
-#./etc/ppp/peers/quectel-ppp
-#./etc/ppp/peers/quectel-chat-connect
-#./etc/ppp/peers/quectel-pppd.sh
-#./etc/ppp/peers/quectel-ppp-kill
-#./etc/watchdog.conf
-#./etc/network/interfaces.d/interface.rndis
-#./etc/modules.5.15
-#./etc/mpv/mpv.conf
-#./etc/update-motd.d/50-motd-news
-#./etc/update-motd.d/00-header
-#./etc/update-motd.d/10-help-text
-#./etc/udev/rules.d/59-plug-event.rules
-#./etc/udev/rules.d/60-display.rules
-#./etc/udev/rules.d/50-usb-realtek-net.rules
-#./etc/udev/rules.d/62-gnss.rules
-#./etc/udev/rules.d/60-vim4.rules
-#./etc/udev/rules.d/99-amlogic.rules
-#./etc/udev/rules.d/10-wifi-disable-powermanagement.rules
-#./etc/modules
-#./etc/init.d
-#./etc/init.d/khadas-restart-nm.sh
-#./etc/init.d/resize2fs
-#./etc/default/watchdog
-#./etc/default/fenix-zram-config.dpkg-dist
-#./etc/default/haveged
-#./etc/default/cpufrequtils
-#./etc/fenix-board-dependencis
-#./etc/rc.local
-#./etc/fenix-release
-#./etc/modules.mainline
-#./optee-video-firmware/lib/teetz
-#./optee-video-firmware/lib/systemd/system/video-firmware-preload-khadas.service
-#./optee-video-firmware/lib/optee_armtz/526fc4fc-7ee6-4a12-96e3-83da9565bce8.ta
-#./optee-video-firmware/usr/lib/libtee_preload_fw.so
-#./optee-video-firmware/usr/bin/tee_preload_fw
-#./optee-userspace/lib/systemd/system/tee-supplicant.service
-#./optee-userspace/usr/lib/libteec.so.1.0
-#./optee-userspace/usr/lib/libteec.so.1
-#./optee-userspace/usr/lib/libteec.so
-#./optee-userspace/usr/include/tee_client_socket.h
-#./optee-userspace/usr/include/teec_trace.h
-#./optee-userspace/usr/include/tee_client_api_extensions.h
-#./optee-userspace/usr/include/tee_client_api.h
-#./optee-userspace/usr/bin/tee-supplicant
-#./usr/share/plymouth/themes/fenix/passw-dialog.png
-#./usr/share/plymouth/themes/fenix/test.png
-#./usr/share/plymouth/themes/fenix/fsck-fade.png
-#./usr/share/plymouth/themes/fenix/progress-meter_16bit.png
-#./usr/share/plymouth/themes/fenix/progress-fade.png
-#./usr/share/plymouth/themes/fenix/fenix.script
-#./usr/share/plymouth/themes/fenix/fenix.plymouth
-#./usr/share/plymouth/themes/fenix/spinner.png
-#./usr/share/plymouth/themes/fenix/logo.png
-#./usr/share/plymouth/themes/fenix/progress-meter.png
-#./usr/share/plymouth/themes/fenix/watermark.png
-#./usr/share/plymouth/themes/fenix/progress-fade_16bit.png
-#./usr/share/initramfs-tools/scripts/local
-#./usr/share/fenix/logo/logo.bmp
-#./usr/share/fenix/logo/logo.png
-#./usr/lib/NetworkManager/conf.d/10-override-random-mac.conf
-#./usr/lib/NetworkManager/conf.d/zz-override-wifi-powersave-off.conf
-#./usr/lib/fenix/fenix-zram-config
-#./usr/lib/fenix/fenix-hardware-optimization
-#./usr/lib/emmc-install/exclude.txt
-#./usr/sbin/emmc-install
-#./usr/local/bin/system_check
-#./usr/local/bin/panel_setup.sh
-#./usr/local/bin/tone2-control.sh
-#./usr/local/bin/fan.sh
-#./usr/local/bin/tone2.sh
-#./usr/local/bin/display_setup.sh
-#./usr/local/bin/fan_setup.sh
-#./usr/local/bin/hdmitx_hpd_event.sh
-#./usr/local/bin/brcm_patchram_plus
-#./usr/local/bin/bluetooth-khadas.sh
-#./usr/local/bin/adbd
-#./usr/local/bin/hdmi.sh
-#./usr/local/bin/wol_setup.sh
-#./usr/local/bin/do-fenix-full-upgrade
-#./usr/local/bin/usb-gadget
-#./usr/local/bin/reboot-test-handle.sh
-#./usr/local/bin/systeminfo.sh
-#./usr/local/bin/cpu_freq_setup.sh
-#./usr/local/bin/reboot2oowow
-#./usr/local/bin/hciattach
