sm8550 improvements, remove mali-G31, update reglinux-qt6 following a3gen2/s9gen4 panfrost

--- a/board/qualcomm/sm8550/odin2portal/LinuxLoader.cfg
+++ b/board/qualcomm/sm8550/odin2portal/LinuxLoader.cfg
@@ -54,4 +54,4 @@ DisableDisplayHW = true
 Image = "boot/linux"
 initrd = "boot/initrd.lz4"
 devicetree = "boot/qcs8550-ayn-odin2portal.dtb"
-cmdline = "clk_ignore_unused pd_ignore_unused console=tty0 loglevel=9 splash=verbose rw rootwait label=REGLINUX"
+cmdline = "fbcon=rotate:3 quiet rootwait label=REGLINUX"
