Added the option to build with debug mode enabled and enabled by default in Jenskins

--- a/Makefile.jenkins
+++ b/Makefile.jenkins
@@ -1,21 +1,26 @@
-PROJECT_DIR    := $(shell pwd)
-DL_DIR         ?= $(PROJECT_DIR)/dl
-OUTPUT_DIR     ?= $(PROJECT_DIR)/output
-CCACHE_DIR     ?= $(PROJECT_DIR)/buildroot-ccache
-LOCAL_MK       ?= $(PROJECT_DIR)/reglinux.mk
-EXTRA_OPTS     ?=
-DOCKER_OPTS    ?=
-NPROC          := $(shell nproc)
-MAKE_JLEVEL    ?= $(NPROC)
-MAKE_LLEVEL    ?= $(shell echo $$(($(NPROC) * 1)))
-BATCH_MODE     ?=
-PARALLEL_BUILD ?=
-DOCKER         ?= docker
+PROJECT_DIR	:= $(shell pwd)
+DL_DIR		?= $(PROJECT_DIR)/dl
+OUTPUT_DIR	?= $(PROJECT_DIR)/output
+CCACHE_DIR	?= $(PROJECT_DIR)/buildroot-ccache
+LOCAL_MK	?= $(PROJECT_DIR)/reglinux.mk
+EXTRA_OPTS	?=
+DOCKER_OPTS	?=
+NPROC		:= $(shell nproc)
+MAKE_JLEVEL	?= $(NPROC)
+MAKE_LLEVEL	?= $(shell echo $$(($(NPROC) * 1)))
+BATCH_MODE	?=
+PARALLEL_BUILD	?=
+DEBUG_BUILD	?= y
+DOCKER		?= docker
 
 -include $(LOCAL_MK)
 
 ifdef PARALLEL_BUILD
 	EXTRA_OPTS +=  BR2_PER_PACKAGE_DIRECTORIES=y
+endif
+
+ifdef DEBUG_BUILD
+	EXTRA_OPTS +=  BR2_ENABLE_DEBUG=y
 endif
 
 MAKE_OPTS  += -j$(MAKE_JLEVEL)
