--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -170,9 +170,6 @@ config BR2_PACKAGE_REGLINUX_VULKAN
 	# for debug purposes
 	select BR2_PACKAGE_MESA3D_VULKAN_DRIVER_LAVAPIPE	if BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
 
-	# Vulkan samples
-	#select BR2_PACKAGE_VULKAN_SAMPLES			if BR2_ENABLE_DEBUG
-
 	help
 	  Vulkan support for REG-Linux
 
@@ -491,6 +488,8 @@ config BR2_PACKAGE_SYSTEM_DEBUG
 	select BR2_PACKAGE_GDB_DEBUGGER
 	select BR2_PACKAGE_LINUX_TOOLS_PERF
 	select BR2_PACKAGE_LINUX_TOOLS_PERF_TUI
+	select BR2_PACKAGE_MESA3D_DEMOS			if BR2_PACKAGE_MESA3D
+	select BR2_PACKAGE_VULKAN_SAMPLES		if BR2_PACKAGE_REGLINUX_VULKAN
 
 	help
 	  Install packages for system debug mode
@@ -1719,7 +1718,6 @@ config BR2_PACKAGE_BATOCERA_RPI_MESA3D
 	select BR2_PACKAGE_MESA3D_OPENGL_ES
 	select BR2_PACKAGE_MESA3D_OPENGL_EGL
 	select BR2_PACKAGE_MESA3D_OPENGL_GLX		if BR2_PACKAGE_XORG7
-	select BR2_PACKAGE_MESA3D_DEMOS			if BR2_PACKAGE_XORG7
 	select BR2_PACKAGE_LIBGLVND			if BR2_PACKAGE_XORG7
 
 config BR2_PACKAGE_BATOCERA_LIMA_MESA3D
@@ -1738,7 +1736,6 @@ config BR2_PACKAGE_SYSTEM_PANFROST_MESA3D
 	select BR2_PACKAGE_MESA3D_OPENGL_ES
 	select BR2_PACKAGE_MESA3D_OPENGL_EGL
 	select BR2_PACKAGE_MESA3D_OPENGL_GLX		if BR2_PACKAGE_XORG7
-	select BR2_PACKAGE_MESA3D_DEMOS			if BR2_PACKAGE_XORG7
 	select BR2_PACKAGE_LIBGLVND			if BR2_PACKAGE_XORG7
 
 config BR2_PACKAGE_REGLINUX_ASAHI_MESA3D
@@ -1750,7 +1747,6 @@ config BR2_PACKAGE_REGLINUX_ASAHI_MESA3D
 	select BR2_PACKAGE_MESA3D_OPENGL_ES
 	select BR2_PACKAGE_MESA3D_OPENGL_EGL
 	select BR2_PACKAGE_MESA3D_OPENGL_GLX		if BR2_PACKAGE_XORG7
-	select BR2_PACKAGE_MESA3D_DEMOS			if BR2_PACKAGE_XORG7
 	select BR2_PACKAGE_LIBGLVND			if BR2_PACKAGE_XORG7
 
 config BR2_PACKAGE_SYSTEM_FREEDRENO_MESA3D
@@ -1761,7 +1757,6 @@ config BR2_PACKAGE_SYSTEM_FREEDRENO_MESA3D
 	select BR2_PACKAGE_MESA3D_OPENGL_ES
 	select BR2_PACKAGE_MESA3D_OPENGL_EGL
 	select BR2_PACKAGE_MESA3D_OPENGL_GLX		if BR2_PACKAGE_XORG7
-	select BR2_PACKAGE_MESA3D_DEMOS			if BR2_PACKAGE_XORG7
 	select BR2_PACKAGE_LIBGLVND			if BR2_PACKAGE_XORG7
 
 config BR2_PACKAGE_REGLINUX_ETNAVIV_MESA3D
@@ -1911,7 +1906,6 @@ config BR2_PACKAGE_BATOCERA_GPU_X86
 	select BR2_PACKAGE_MESA3D_OPENGL_EGL
 	select BR2_PACKAGE_MESA3D_OPENGL_GLX			if BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
 	select BR2_PACKAGE_MESA3D_LLVM
-	select BR2_PACKAGE_MESA3D_DEMOS
 
 	select BR2_PACKAGE_MESA3D_VIDEO_CODEC_VC1DEC		if BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
 	select BR2_PACKAGE_MESA3D_VIDEO_CODEC_H264DEC		if BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
