Fix sm8550 kernel scheluding

--- a/board/qualcomm/sm8550/linux_sm8550-defconfig.config
+++ b/board/qualcomm/sm8550/linux_sm8550-defconfig.config
@@ -430,9 +430,9 @@ CONFIG_ARM64_LPA2=y
 # CONFIG_CPU_BIG_ENDIAN is not set
 CONFIG_CPU_LITTLE_ENDIAN=y
 CONFIG_SCHED_MC=y
-# CONFIG_SCHED_CLUSTER is not set
-CONFIG_SCHED_SMT=y
-CONFIG_NR_CPUS=512
+CONFIG_SCHED_CLUSTER=y
+# CONFIG_SCHED_SMT is not set
+CONFIG_NR_CPUS=64
 CONFIG_HOTPLUG_CPU=y
 CONFIG_NUMA=y
 CONFIG_NODES_SHIFT=4
