--- a/package/emulators/cemu/Config.in
+++ b/package/emulators/cemu/Config.in
@@ -7,6 +7,7 @@ config BR2_PACKAGE_CEMU
     select BR2_PACKAGE_PUGIXML
     select BR2_PACKAGE_RAPIDJSON
     select BR2_PACKAGE_BOOST
+    select BR2_PACKAGE_BOOST_CONTEXT
     select BR2_PACKAGE_BOOST_PROGRAM_OPTIONS
     select BR2_PACKAGE_BOOST_FILESYSTEM
     select BR2_PACKAGE_BOOST_NOWIDE
