--- a/package/libraries/gamemode/Config.in
+++ b/package/libraries/gamemode/Config.in
@@ -1,6 +1,8 @@
 config BR2_PACKAGE_GAMEMODE
 	bool "gamemode"
 	select BR2_PACKAGE_DBUS
+	select BR2_PACKAGE_BASU
+	select BR2_PACKAGE_INIH
 
 	help 
 	    GameMode is a daemon/lib combo for Linux that allows games to request a set of optimisations be temporarily applied to the host OS and/or a game process.
