--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -1269,6 +1269,7 @@ config BR2_PACKAGE_BATOCERA_COMPUTER_SYSTEMS
 
 	# Apple 2
 	select BR2_PACKAGE_APPLEWIN		# ALL
+	select BR2_PACKAGE_LIBRETRO_APPLEWIN	# ALL
 	select BR2_PACKAGE_IZAPPLE2		if !BR2_PACKAGE_REGLINUX_RELEASE && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_JZ4770
 
 	# Apple 2 GS
