--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -400,12 +400,7 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 						   BR2_PACKAGE_SYSTEM_TARGET_A3GEN2	|| \
 						   BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
 
-	# do NOT remove this one for OGA
-	select BR2_PACKAGE_RTL8192EU		if !BR2_PACKAGE_SYSTEM_TARGET_JZ4770  && \
-						   !BR2_PACKAGE_SYSTEM_TARGET_BCM2835	&& \
-						   !BR2_PACKAGE_SYSTEM_TARGET_H3	&& \
-						   !BR2_PACKAGE_SYSTEM_TARGET_RK3128	&& \
-						   !BR2_PACKAGE_SYSTEM_TARGET_RK3588
+	select BR2_PACKAGE_RTL8192EU		if !BR2_PACKAGE_SYSTEM_TARGET_JZ4770 && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_CHA
 
 	select BR2_PACKAGE_RTL8822CS		if BR2_PACKAGE_SYSTEM_TARGET_S905GEN3
 
